--- a/resources/scss/components/Modal/_share-page.scss
+++ b/resources/scss/components/Modal/_share-page.scss
@@ -12,7 +12,8 @@
 }
 
 .share-page__container {
-	margin-block: space(2) space(3);
+	margin-top: space(3);
+	margin-bottom: space(1);
 	display: flex;
 	gap: space(2);
 	flex-direction: column;
